almost finished, no pretty

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </div>
 
     
-    <script type="text/javascript" href="assets/javascript/code.js"></script>
+    <script type="text/javascript" src="assets/javascript/code.js"></script>
 </body>
 
 </html>
