barely finished, just didn't have that much time

--- a/index.html
+++ b/index.html
@@ -4,15 +4,17 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>City/Country Trivia</title>
+    <title>Geography Trivia</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="assets/style/style.css" />
+    <link href="https://fonts.googleapis.com/css?family=Notable|Oswald" rel="stylesheet"> 
+    
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 </head>
 
 <body>
     <div id="wrapper">
-        <h1 id="title">City/Country Trivia</h1>
+        <h1 id="title">Geography Trivia</h1>
         <div id="subWrapper">
             <button id="start">Start!</button>
         </div>
